--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <title>PLS World News - Breaking News & Global Coverage</title>
     
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="PLS_Homepage_Logo.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="PLS_Homepage_Logo.png">
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -62,7 +62,7 @@
         ],
         "contactPoint": {
             "@type": "ContactPoint",
-            "telephone": "+1-555-NEWS-PLS",
+            "telephone": "+234 8108821809",
             "contactType": "customer service",
             "email": "contact@plsworldnews.com"
         }
@@ -74,7 +74,7 @@
     <div id="loading-screen" class="loading-screen">
         <div class="loading-content">
             <div class="loading-logo">
-                <img src="assets/images/logo.png" alt="PLS World News">
+                <img src="PLS_Homepage_Logo.png" alt="PLS World News">
             </div>
             <div class="loading-spinner"></div>
             <p>Loading latest news...</p>
@@ -120,7 +120,7 @@
                         <a href="https://youtube.com/plsworldnews" aria-label="YouTube">
                             <i class="fab fa-youtube"></i>
                         </a>
-                        <a href="https://linkedin.com/company/plsworldnews" aria-label="LinkedIn">
+                        <a href="www.linkedin.com/in/peter-eluwade-5b8a73363" aria-label="LinkedIn">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
                     </div>
