--- a/index.html
+++ b/index.html
@@ -1028,6 +1028,8 @@
 
     <!-- JavaScript Files -->
     <script src="main.js"></script>
+    <script src="carousel.js"></script>
+    <script src="utils.js"></script>
     <script src="news.js"></script>
     <script src="newsletter.js"></script>
     
